# little-rust-in-C

./: .gitignore  CMakeLists.txt  README.md
my-rust/: Cargo.toml
my-rust/src/: build.rs  lib.rs
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
src/: main.c
